-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.1.4
-
3
-
8288
We started getting many of these messages on our 2.1.4 MDS. The timing corresponded with client reconnection problems, i.e. LU-1934.
2013-05-15 15:54:44 Lustre: lsd-MDT0000: Client a22a8a8a-754a-c1ab-859d-eda3c476a27d (at 192.168.112.1@o2ib6) reconnecting 2013-05-15 15:54:44 Lustre: Skipped 143 previous similar messages 2013-05-15 15:54:44 Lustre: lsd-MDT0000: Client a22a8a8a-754a-c1ab-859d-eda3c476a27d (at 192.168.112.1@o2ib6) refused reconnection, still busy with 1 active RPCs 2013-05-15 15:54:44 Lustre: Skipped 143 previous similar messages 2013-05-15 15:56:31 LustreError: 5204:0:(sec.c:385:import_sec_validate_get()) import ffff88061d4a7000 (FULL) with no sec 2013-05-15 15:56:31 LustreError: 5204:0:(sec.c:385:import_sec_validate_get()) Skipped 2399 previous similar messages
The MDS was just rebooted without a crash dump so, unless this reproduces, we won't be able to tell much about the imports in question.
- is related to
-
LU-7030 import_sec_validate_get()) import ffff8819c6497800 (FULL) with no sec (again)
-
- Closed
-